# LondonCrimeInsights

./: MPS Borough Level Crime (Historical).csv  MPS Borough Level Crime (most recent 24 months).csv  ProjectJournal.txt  README.md  pyproject.toml  requirements.txt
data/bronze_data/: bronze_crime_monthly.csv
notebooks/: EDA.ipynb
scripts/: prep_data.py  read_data.py
