[tool.poetry]
name = "londoncrimeinsights"
version = "0.1.0"
description = ""
authors = ["jn607 <joshynolan02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
plotly = "^5.20.0"
scikit-learn = "^1.4.1.post1"
dash = "^2.16.1"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
